# Flux-Calculation

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  project-brief.md  redocly.yaml  report.md
assignment/: chunk_1.md  chunk_10.md  chunk_11.md  chunk_12.md  chunk_13.md  chunk_14.md  chunk_2.md  chunk_3.md  chunk_4.md  chunk_5.md  chunk_6.md  chunk_7.md  chunk_8.md  chunk_9.md  frontend.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: analyses.py  errors.py  export.py  match.py  notes.py  results.py
backend/app/core/: config.py  logging.py  middleware.py  monitoring.py
backend/app/db/: models.py  session.py  storage.py
backend/app/export/: tabular.py
backend/app/flux/: constants.py  flux.py  pipeline.py  regression.py
backend/app/llm/: __init__.py
backend/app/matching/: match.py  timeshift.py
backend/app/parsing/: encoding.py  li7810.py  notes.py  pressure.py  tabular.py  temperature.py
backend/app/schemas/: analysis.py  match.py  notes.py  results.py
backend/sample_data/: generate_samples.py  li7810_sample.txt  notes_sample.csv  pressure_sample.csv  temperature_sample.xlsx
backend/scripts/: export_openapi.py
backend/tests/: README.md  conftest.py  test_api_analyses.py  test_api_export.py  test_api_match.py  test_api_notes.py  test_api_results.py  test_db.py  test_e2e.py  test_flux.py  test_flux_pipeline.py  test_health.py  test_logging.py  test_match.py  test_monitoring.py  test_parse_li7810.py  test_parse_notes.py  test_parse_pressure.py  test_parse_tabular.py  test_parse_temperature.py  test_regression.py  test_storage.py  test_timeshift.py
backend/tests/integration/: README.md
backend/tests/security/: test_security.py
backend/tests/unit/: README.md
docs/: architecture.md  openapi.json  operations.md
(+86 files in other folders)
